2011-01-27  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/Plugins.cmake: Append ${plugin}_extra_sources to
	automatically-generated plugin source list.

	* plugins/Mpeg3Plugin/config.cmake: Disable pthreads unconditionally.
	Add mpeg library files to plugin_extra_sources.

2011-01-24  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c (sqGetFilenameFromString): Handle relative symlinks properly.

2011-01-23  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UUIDPlugin/sqUnixUUID.c (MakeUUID): NetBSD has
	uuid_generate() not uuidgen().

	* vm-display-X11/config.cmake: Use configured variable
	X11_Xrender_LIB in link libraries list.

	* plugins/FloatMathPlugin/config.cmake: Set LIBM_CFLAGS to disable GNUCC optimisation.

	* plugins/FloatMathPlugin/build.cmake: Set CFLAGS to LIBM_CFLAGS for this target only.

2010-12-31  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/FloatMathPlugin/config.cmake: Set little-endian flag
	explicitly.  Disable GCC optimisations.

2010-08-06  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/config.cmake: Manually check for Xrender library.
	Set HAVE_LIBXRENDER instead of HAVE_LIB_XRENDER.

2010-05-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/CameraPlugin/sqCamera.c: Added.

	* npsqueak/npsqueakrun.in (realpath): prepend dir to link target
	iff target is relative.

	* cmake/squeak.in (wrapper): Don't echo the environment.

	* CMakeLists.txt: Add subdir npsqueak.

	* npsqueak.c: Cosmetic improvements to error messages.

	* npsqueak/README.npsqueak: Updated for CMake.

	* npsqueak/npsqueakrun.in: New version from Bert.

	* npsqueak/npsqueakregister.in (NPSQUEAK_SO): Construct from
	substituted cmake variables.

	* cmake/squeak.in (realpath): prepend dir to link target iff
	target is relative.  Only echo environment if SQUEAK_DEBUG is
	nonzero.
